applications/services/radicle/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radicle
  namespace: radicle
  labels:
    app.kubernetes.io/name: radicle
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: radicle
  template:
    metadata:
      labels:
        app.kubernetes.io/name: radicle
    spec:
      containers:
        - name: node
          image: fredix/radicle-node:1.6.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: p2p
              containerPort: 8776
          volumeMounts:
            - name: home
              mountPath: /radicle
          readinessProbe:
            tcpSocket:
              port: 8776
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8776
            initialDelaySeconds: 45
            periodSeconds: 30
        - name: httpd
          image: fredix/radicle-httpd:0.23.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 45
            periodSeconds: 30
          volumeMounts:
            - name: home
              mountPath: /radicle
      volumes:
        - name: home
          persistentVolumeClaim:
            claimName: radicle-home
        - name: node-config
          configMap:
            name: radicle-node-config
